# roptlite

./: .gitignore  CMakeLists.txt  Compile_All.m  GenerateMyMex.m  Makefile  MyMex.m  README.md
Manifolds/: CFixedRankQ2F.cpp  CFixedRankQ2F.h  CStiefel.cpp  CStiefel.h  CSymFixedRankQ.cpp  CSymFixedRankQ.h  Element.cpp  Element.h  Euclidean.cpp  Euclidean.h  FixedRankE.cpp  FixedRankE.h  FixedRankE3F.cpp  FixedRankE3F.h  FixedRankQ2F.cpp  FixedRankQ2F.h  Grassmann.cpp  Grassmann.h  Manifold.cpp  Manifold.h  MultiManifolds.cpp  MultiManifolds.h  PoincareBall.cpp  PoincareBall.h  SPDManifold.cpp  SPDManifold.h  SmartSpace.cpp  SmartSpace.h  Sphere.cpp  Sphere.h  SphereTx.cpp  SphereTx.h  Stiefel.cpp  Stiefel.h  SymFixedRankQ.cpp  SymFixedRankQ.h
Matlab/: SparseMatrixMultiplication.m
Others/: BlasLapackCppWrapper.cpp  BlasLapackCppWrapper.h  ForDebug.cpp  ForDebug.h  MinPNormConHull.cpp  MinPNormConHull.h  Readme.txt  Readme.txt.bak  SparseMatrix.cpp  SparseMatrix.h  Spline.cpp  Spline.h  Timer.cpp  Timer.h  def.h
Problems/: CFRankQ2FBlindDecon2D.cpp  CFRankQ2FBlindDecon2D.h  CSFRQPhaseRetrieval.cpp  CSFRQPhaseRetrieval.h  CStieBrockett.cpp  CStieBrockett.h  EucQuadratic.cpp  EucQuadratic.h  FRankE3FMatCompletion.cpp  FRankE3FMatCompletion.h  FRankESparseApprox.cpp  FRankESparseApprox.h  FRankETextureInpainting.cpp  FRankETextureInpainting.h  FRankEWeightApprox.cpp  FRankEWeightApprox.h  FRankQ2FMatCompletion.cpp  FRankQ2FMatCompletion.h  GrassMatCompletion.cpp  GrassMatCompletion.h  GrassPCA.cpp  GrassPCA.h  GrassRQ.cpp  GrassRQ.h  GrassSVPCA.cpp  GrassSVPCA.h  ObliqueSPCA.cpp  ObliqueSPCA.h  PoincareEmbeddings.cpp  PoincareEmbeddings.h  Problem.cpp  Problem.h  ProdStieSumBrockett.cpp  ProdStieSumBrockett.h  SFRQLyapunov.cpp  SFRQLyapunov.h  SPDKarcherMean.cpp  SPDKarcherMean.h  SphereConvexHull.cpp  SphereConvexHull.h  (+14 more)
Solvers/: IARPG.cpp  IARPG.h  IRPG.cpp  IRPG.h  LRBFGS.cpp  LRBFGS.h  LRBFGSSub.cpp  LRBFGSSub.h  LRBroydenFamily.cpp  LRBroydenFamily.h  LRTRSR1.cpp  LRTRSR1.h  LRTRSR1woR.cpp  LRTRSR1woR.h  RADAM.cpp  RADAM.h  RADAMSP.cpp  RADAMSP.h  RAMSGRAD.cpp  RAMSGRAD.h  RAMSGRADSP.cpp  RAMSGRADSP.h  RBFGS.cpp  RBFGS.h  RBFGSSub.cpp  RBFGSSub.h  RBroydenFamily.cpp  RBroydenFamily.h  RCG.cpp  RCG.h  RGS.cpp  RGS.h  RNewton.cpp  RNewton.h  RSD.cpp  RSD.h  RSGD.cpp  RSGD.h  RSVRG.cpp  RSVRG.h  (+32 more)
cmake/: CMakeLists.txt  configureVersion.cmake  roptlibConfig.cmake  roptliteConfig.cmake  roptliteConfig.cmake.in  version.cmake
cwrapper/: f2cc.h
src/: CMakeLists.txt
src/Manifolds/: CFixedRankQ2F.cpp  CStiefel.cpp  CSymFixedRankQ.h  Element.cpp  Element.h  Euclidean.h  FixedRankE.cpp  FixedRankQ2F.cpp  FixedRankQ2F.h  Manifold.h  MultiManifolds.cpp  SPDManifold.cpp  SPDManifold.h  SmartSpace.h  Sphere.h  Stiefel.h  SymFixedRankQ.cpp  SymFixedRankQ.h
src/Others/: BlasLapackCppWrapper.cpp  BlasLapackCppWrapper.h  ForDebug.cpp  MinPNormConHull.h  Readme.txt  SparseMatrix.cpp  Timer.cpp  def.h
src/Others/SparseBLAS/: blas_enum.h  nist_spblas.cpp
src/Others/fftw/: fftw3.h
src/Problems/: CFRankQ2FBlindDecon2D.cpp  CFRankQ2FBlindDecon2D.h  CSFRQPhaseRetrieval.cpp  CSFRQPhaseRetrieval.h  CStieBrockett.cpp  CStieBrockett.h  FRankETextureInpainting.cpp  FRankETextureInpainting.h  FRankEWeightApprox.cpp  FRankEWeightApprox.h  FRankQ2FMatCompletion.cpp  FRankQ2FMatCompletion.h  GrassPCA.cpp  GrassPCA.h  GrassRQ.h  ObliqueSPCA.cpp  PoincareEmbeddings.h  ProdStieSumBrockett.h  SPDKarcherMean.cpp  SPDKarcherMean.h  SphereConvexHull.h  SphereSparsestVector.cpp  StieBrockett.cpp  StieSoftICA.h  juliaProblem.cpp  mexProblem.h
src/Solvers/: IARPG.cpp  IARPG.h  IRPG.cpp  LRBFGS.h  LRBFGSSub.cpp  LRBroydenFamily.cpp  LRBroydenFamily.h  LRTRSR1woR.cpp  LRTRSR1woR.h  RADAMSP.cpp  RADAMSP.h  RAMSGRAD.h  RAMSGRADSP.h  RBFGSSub.cpp  RGS.h  RSGD.cpp  RSGD.h  RSVRG.cpp  RTRNewton.cpp  RTRSD.cpp  RTRSR1.cpp  RTRSR1.h  RWRBFGS.h  SVRLRBFGS.cpp  Solvers.cpp  SolversNSM.cpp  SolversNSM.h  SolversNSMPGLS.cpp  SolversNSMPGLS.h  SolversNSMSub.h  SolversNSMSubLS.h  SolversSM.cpp  SolversSMLS.cpp  SolversSMSVRG.cpp  SolversSMSto.cpp  SolversSMTR.cpp  SolversSMTR.h
src/cwrapper/: f2cc.h
src/cwrapper/blas/: caxpy.h  ccopy.h  cdotc.h  cdotu.h  cgbmv.h  cgemm.h  cgemv.h  cgerc.h  cgeru.h  chbmv.h  chemm.h  chemv.h  cher.h  cher2.h  cher2k.h  cherk.h  chpmv.h  chpr.h  chpr2.h  crotg.h  cscal.h  csscal.h  cswap.h  csymm.h  csyr2k.h  csyrk.h  ctbmv.h  ctbsv.h  ctpmv.h  ctpsv.h  ctrmm.h  ctrmv.h  ctrsm.h  ctrsv.h  dasum.h  daxpy.h  dcabs1.h  dcopy.h  ddot.h  dgbmv.h  (+104 more)
src/cwrapper/lapack/: cbdsqr.h  cgbbrd.h  cgbcon.h  cgbequ.h  cgbrfs.h  cgbsv.h  cgbsvx.h  cgbtf2.h  cgbtrf.h  cgbtrs.h  cgebak.h  cgebal.h  cgebd2.h  cgebrd.h  cgecon.h  cgeequ.h  cgees.h  cgeesx.h  cgeev.h  cgeevx.h  cgegs.h  cgegv.h  cgehd2.h  cgehrd.h  cgelq2.h  cgelqf.h  cgels.h  cgelsd.h  cgelss.h  cgelsx.h  cgelsy.h  cgeql2.h  cgeqlf.h  cgeqp3.h  cgeqpf.h  cgeqr2.h  cgeqrf.h  cgerfs.h  cgerq2.h  cgerqf.h  (+1251 more)
test/: DriverCpp.h  TestCFRankQ2FBlindDecon2D.cpp  TestCFRankQ2FBlindDecon2D.h  TestCSFRQPhaseRetrieval.cpp  TestElement.cpp  TestEucQuadratic.h  TestFRankE3FMatCompletion.h  TestFRankESparseApprox.cpp  TestGrassPCA.cpp  (+19 more)
tests/: CMakeLists.txt  DriverCpp.cpp  DriverJuliaProb.cpp  DriverJuliaProb.h  DriverMexProb.cpp  DriverMexProb.h  TestCSFRQPhaseRetrieval.cpp  TestCSFRQPhaseRetrieval.h  TestCStieBrockett.cpp  TestCStieBrockett.h  TestElement.cpp  TestElement.h  TestEucQuadratic.cpp  TestFRankE3FMatCompletion.cpp  TestFRankE3FMatCompletion.h  TestFRankESparseApprox.h  TestFRankETextureInpainting.cpp  TestFRankETextureInpainting.h  TestFRankEWeightApprox.h  TestFRankQ2FMatCompletion.cpp  TestFRankQ2FMatCompletion.h  TestGrassMatCompletion.cpp  TestGrassPCA.h  TestGrassRQ.cpp  TestGrassSVPCA.cpp  TestGrassSVPCA.h  TestObliqueSPCA.cpp  TestObliqueSPCA.h  TestPoincareEmbeddings.cpp  TestPoincareEmbeddings.h  TestProdStieSumBrockett.cpp  TestSFRQLyapunov.h  TestSPDKarcherMean.cpp  TestSPDKarcherMean.h  TestSphereSparsestVector.cpp  TestSphereSparsestVector.h  TestStieBrockett.cpp  TestStieBrockett.h  TestStieSPCA.h  TestStieSoftICA.cpp  (+1 more)
(+712 files in other folders)
